--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.android.support:cardview-v7:24.0.+'
     compile 'com.android.support:design:24.2.1'
+    compile 'com.google.code.gson:gson:2.7'
 
     testCompile 'junit:junit:4.12'
 }
